--- a/src/View/LoginView.fxml
+++ b/src/View/LoginView.fxml
@@ -6,19 +6,19 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox id="LoginPane" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@LoginCSS.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.LoginView">
+<VBox id="LoginView" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@LoginCSS.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.LoginView">
     <children>
       <Label text="Log in">
          <VBox.margin>
             <Insets bottom="20.0" />
          </VBox.margin>
       </Label>
-      <TextField fx:id="usernameField" id="usernameField" maxWidth="-Infinity" prefWidth="220.0" promptText="Username (xxxYYxxx)">
+      <TextField id="usernameField" fx:id="usernameField" maxWidth="-Infinity" prefWidth="220.0" promptText="Username (xxxYYxxx)">
          <VBox.margin>
             <Insets bottom="20.0" />
          </VBox.margin>
          <tooltip>
-            <Tooltip fx:id="usernameTooltip" text="Empty Tooltip" />
+            <Tooltip fx:id="usernameTooltip" text="Username" />
          </tooltip></TextField>
       <PasswordField fx:id="passwordField" maxWidth="-Infinity" prefWidth="220.0" promptText="Password">
          <VBox.margin>
