--- a/src/View/RegisterView.fxml
+++ b/src/View/RegisterView.fxml
@@ -26,29 +26,40 @@
             <Button mnemonicParsing="false" onAction="#fileChooser" prefHeight="27.0" prefWidth="73.0" text="..." />
          </children>
          <VBox.margin>
-            <Insets bottom="20.0" />
+            <Insets bottom="10.0" />
          </VBox.margin>
       </HBox>
         <TextField fx:id="nameField" maxWidth="-Infinity" prefHeight="0.0" prefWidth="220.0" promptText="Name">
             <VBox.margin>
-                <Insets bottom="20.0" />
+                <Insets bottom="10.0" />
             </VBox.margin></TextField>
         <TextField fx:id="lastNameField" maxWidth="-Infinity" prefWidth="220.0" promptText="Surname">
             <VBox.margin>
-                <Insets bottom="20.0" />
+                <Insets bottom="10.0" />
             </VBox.margin></TextField>
+      <TextField fx:id="usernameField" maxWidth="-Infinity" prefWidth="220.0" promptText="Username">
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin>
+         <tooltip>
+            <Tooltip fx:id="usernameTooltip" text="Username" />
+         </tooltip>
+      </TextField>
         <TextField fx:id="emailField" maxWidth="-Infinity" prefWidth="220.0" promptText="E-mail (@uea.ac.uk)">
             <VBox.margin>
-                <Insets bottom="20.0" />
+                <Insets bottom="10.0" />
             </VBox.margin></TextField>
         <PasswordField fx:id="passwordField" maxWidth="-Infinity" prefWidth="220.0" promptText="Password">
             <VBox.margin>
-                <Insets bottom="20.0" />
+                <Insets bottom="10.0" />
             </VBox.margin></PasswordField>
         <Button maxWidth="-Infinity" mnemonicParsing="false" onAction="#registerUser" prefWidth="100.0" text="Submit">
          <VBox.margin>
-            <Insets bottom="20.0" />
+            <Insets bottom="10.0" />
          </VBox.margin></Button>
-      <Button maxWidth="-Infinity" mnemonicParsing="false" onAction="#showLoginScreen" prefWidth="100.0" text="Back" />
+      <Button maxWidth="-Infinity" mnemonicParsing="false" onAction="#showLoginScreen" prefWidth="100.0" text="Back">
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin></Button>
     </children>
 </VBox>
