--- a/src/View/SemesterView.fxml
+++ b/src/View/SemesterView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox id="SemesterView" fx:id="vBox" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SemesterController">
+<VBox id="SemesterView" fx:id="vBox" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.SemesterView">
    <children>
       <MenuBar maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
          <menus>
