--- a/src/View/LoginView.fxml
+++ b/src/View/LoginView.fxml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
-<VBox id="LoginView" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@LoginCSS.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.LoginView">
+<VBox xmlns:fx="http://javafx.com/fxml/1" id="LoginView" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity"
+      minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@LoginCSS.css"
+      xmlns="http://javafx.com/javafx/8" fx:controller="View.LoginView">
     <children>
       <Label text="Log in">
          <VBox.margin>
@@ -17,9 +16,7 @@
          <VBox.margin>
             <Insets bottom="20.0" />
          </VBox.margin>
-         <tooltip>
-            <Tooltip fx:id="usernameTooltip" text="Username" />
-         </tooltip></TextField>
+      </TextField>
       <PasswordField fx:id="passwordField" maxWidth="-Infinity" prefWidth="220.0" promptText="Password">
          <VBox.margin>
             <Insets bottom="20.0" />
