--- a/src/View/RegisterView.fxml
+++ b/src/View/RegisterView.fxml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.layout.VBox?>
-
-<VBox id="RegisterView" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.RegisterView">
+<VBox xmlns:fx="http://javafx.com/fxml/1" id="RegisterView" alignment="CENTER" maxHeight="-Infinity"
+      maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
+      xmlns="http://javafx.com/javafx/8" fx:controller="View.RegisterView">
     <children>
       <Label text="Register">
          <VBox.margin>
@@ -23,7 +19,7 @@
                   <Insets right="10.0" />
                </HBox.margin>
             </TextField>
-            <Button mnemonicParsing="false" onAction="#fileChooser" prefHeight="27.0" prefWidth="73.0" text="..." />
+             <Button mnemonicParsing="false" onAction="#parseProfile" prefHeight="27.0" prefWidth="73.0" text="..."/>
          </children>
          <VBox.margin>
             <Insets bottom="10.0" />
@@ -41,9 +37,6 @@
          <VBox.margin>
             <Insets bottom="10.0" />
          </VBox.margin>
-         <tooltip>
-            <Tooltip fx:id="usernameTooltip" text="Username" />
-         </tooltip>
       </TextField>
         <TextField fx:id="emailField" maxWidth="-Infinity" prefWidth="220.0" promptText="E-mail (@uea.ac.uk)">
             <VBox.margin>
