--- a/src/View/SemesterView.fxml
+++ b/src/View/SemesterView.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
-
-<VBox id="SemesterView" fx:id="vBox" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.SemesterView">
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<VBox xmlns:fx="http://javafx.com/fxml/1" id="SemesterView" fx:id="semesterView" prefHeight="400.0" prefWidth="600.0"
+      xmlns="http://javafx.com/javafx/8" fx:controller="View.SemesterView">
    <children>
       <MenuBar maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
          <menus>
@@ -34,7 +30,7 @@
         <tabs>
           <Tab text="Dashboard">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <fx:include fx:id="dashboard" source="Dashboard.fxml"/>
             </content>
           </Tab>
           <Tab text="Modules">
