--- a/src/View/DashboardCSS.css
+++ b/src/View/DashboardCSS.css
@@ -1,3 +1,6 @@
-.missedDeadline {
-    -fx-font-size: 26px;
-}
+/*#upcomingGrid{*/
+/*-fx-background-color: cornsilk; -fx-alignment: center;*/
+/*}*/
+/*#dashboardGrid{*/
+/*-fx-background-color: palegreen; -fx-padding: 2; -fx-hgap: 2; -fx-vgap: 2;*/
+/*}*/
