--- a/src/View/NewMain.fxml
+++ b/src/View/NewMain.fxml
@@ -3,21 +3,25 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<GridPane fx:id="mainViewPane" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-          minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8"
-          xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.MainView">
-    <!--<columnConstraints>-->
-    <!--<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />-->
-    <!--<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />-->
-    <!--</columnConstraints>-->
-    <!--<rowConstraints>-->
-    <!--<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
-    <!--<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
-    <!--</rowConstraints>-->
+<?import javafx.scene.text.Font?>
+<GridPane fx:id="mainViewPane" alignment="TOP_CENTER" prefHeight="400.0" prefWidth="600.0"
+          xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.MainView">
+    <columnConstraints>
+        <ColumnConstraints halignment="CENTER" prefWidth="400"/>
+        <ColumnConstraints halignment="CENTER" prefWidth="400"/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints maxHeight="129.0" minHeight="0.0" prefHeight="27.0" valignment="CENTER"/>
+        <RowConstraints maxHeight="129.0" minHeight="0.0" prefHeight="16.0" valignment="CENTER"/>
+        <RowConstraints maxHeight="241.0" minHeight="71.0" prefHeight="175.0" valignment="CENTER"/>
+        <RowConstraints maxHeight="248.0" minHeight="8.0" prefHeight="28.0" valignment="CENTER"/>
+        <RowConstraints maxHeight="248.0" minHeight="8.0" prefHeight="10.0" valignment="CENTER"/>
+        <RowConstraints maxHeight="248.0" minHeight="146.0" prefHeight="160.0" valignment="CENTER"/>
+    </rowConstraints>
     <children>
-        <HBox GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <HBox GridPane.columnIndex="1" GridPane.rowIndex="5">
             <children>
-                <TableView fx:id="activitiesTable">
+                <TableView fx:id="activitiesTable" maxHeight="250.0">
                     <columns>
                         <TableColumn prefWidth="259.0" text="Activities"/>
                     </columns>
@@ -37,7 +41,7 @@
                 <Insets left="5.0"/>
             </GridPane.margin>
         </HBox>
-        <VBox alignment="TOP_CENTER" GridPane.rowIndex="1">
+        <VBox alignment="TOP_CENTER" GridPane.rowIndex="5">
             <children>
                 <ComboBox fx:id="taskSelect" maxHeight="30" promptText="Choose a task">
                     <VBox.margin>
@@ -53,7 +57,7 @@
                           promptText="To select a task, you first must select a module and assessment from above"/>
             </children>
         </VBox>
-        <VBox>
+        <VBox GridPane.rowIndex="2">
             <children>
                 <HBox prefHeight="39.0" prefWidth="288.0">
                     <children>
@@ -61,7 +65,7 @@
                         <ComboBox fx:id="assessmentSelect" maxHeight="30" prefWidth="150.0" promptText="Assessment"/>
                     </children>
                 </HBox>
-                <TextArea fx:id="moduleDetails" editable="false" prefHeight="186.0" prefWidth="288.0"
+                <TextArea fx:id="moduleDetails" editable="false" prefHeight="121.0" prefWidth="300.0"
                           promptText="Module and assessment details. Select them from the dropdown box above.">
                     <VBox.margin>
                         <Insets bottom="3.0"/>
@@ -69,11 +73,11 @@
                 </TextArea>
             </children>
         </VBox>
-        <VBox GridPane.columnIndex="1">
+        <VBox GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
             <children>
                 <HBox prefHeight="100.0" prefWidth="200.0">
                     <children>
-                        <TableView fx:id="taskTable" prefHeight="116.0" prefWidth="278.0"/>
+                        <TableView fx:id="taskTable" maxHeight="250.0"/>
                         <VBox alignment="TOP_CENTER" prefHeight="90.0" prefWidth="54.0">
                             <children>
                                 <Button mnemonicParsing="false" onAction="#addTask" text="+">
@@ -95,7 +99,7 @@
                 </HBox>
                 <HBox prefHeight="100.0" prefWidth="200.0">
                     <children>
-                        <TableView prefHeight="120.0" prefWidth="278.0">
+                        <TableView>
                             <columns>
                                 <TableColumn prefWidth="256.0" text="Milestones"/>
                             </columns>
@@ -117,13 +121,19 @@
                 <Insets bottom="3.0" left="5.0"/>
             </GridPane.margin>
         </VBox>
+        <Label text="Add Tasks &amp; Milestones">
+            <font>
+                <Font name="System Bold Italic" size="25.0"/>
+            </font>
+        </Label>
+        <Separator prefWidth="200.0" GridPane.rowIndex="1"/>
+        <Separator prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+        <Label text="Add Activities" GridPane.rowIndex="3">
+            <font>
+                <Font size="25.0"/>
+            </font>
+        </Label>
+        <Separator prefWidth="200.0" GridPane.rowIndex="4"/>
+        <Separator prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
     </children>
-    <columnConstraints>
-        <ColumnConstraints/>
-        <ColumnConstraints/>
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints/>
-        <RowConstraints/>
-    </rowConstraints>
 </GridPane>
