--- a/src/View/LoginView.fxml
+++ b/src/View/LoginView.fxml
@@ -21,7 +21,7 @@
          <VBox.margin>
             <Insets bottom="20.0" />
          </VBox.margin></PasswordField>
-        <Button maxWidth="-Infinity" mnemonicParsing="false" onAction="#loginUser" prefWidth="100.0" text="Submit">
+        <Button maxWidth="-Infinity" mnemonicParsing="false" onAction="#directLogIn" prefWidth="100.0" text="Submit">
          <VBox.margin>
             <Insets bottom="20.0" />
          </VBox.margin></Button>
