--- a/src/View/ActivityAssessment.fxml
+++ b/src/View/ActivityAssessment.fxml
@@ -64,7 +64,7 @@
                 </TextField>
                 <Button mnemonicParsing="false" onAction="#addActivity" text="Add activity"/>
                 <Button mnemonicParsing="false" text="Apply activity to multiple tasks..."/>
-                <Button mnemonicParsing="false" text="Update notes"/>
+                <Button onAction="#updateNote" mnemonicParsing="false" text="Update notes"/>
             </children>
         </VBox>
         <Label disable="true" text="Activities &amp; Notes" GridPane.halignment="CENTER" GridPane.rowIndex="1">
@@ -72,7 +72,7 @@
                 <Font size="18.0"/>
             </font>
         </Label>
-        <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+        <TextArea fx:id="notesField" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
             <GridPane.margin>
                 <Insets bottom="25.0" left="10.0" right="10.0" top="10.0"/>
             </GridPane.margin>
