--- a/src/View/ActivityMilestone.fxml
+++ b/src/View/ActivityMilestone.fxml
@@ -61,7 +61,7 @@
                 <Font size="18.0"/>
             </font>
         </Label>
-        <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+        <TextArea fx:id="notesFied" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
             <GridPane.margin>
                 <Insets bottom="25.0" left="10.0" right="10.0" top="10.0"/>
             </GridPane.margin>
